--- a/20240721.html
+++ b/20240721.html
@@ -20,7 +20,7 @@
         <script type="text/javascript" src="js/jquery.topage.js"></script>
         <script type="text/javascript" src="js/common.js"></script>
         <script type="text/javascript" src="js/mask.js"></script>
-        <script type="text/javascript" src="js//qrcode.min.js"></script>
+        <script type="text/javascript" src="js/123/qrcode.min.js"></script>
         <script type="text/javascript"
             src="js/jquery.colorbox-min.js"></script>
         <script type="text/javascript"
