--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script type="text/javascript" src="js/jquery.topage.js"></script>
         <script type="text/javascript" src="js/common.js"></script>
         <script type="text/javascript" src="js/mask.js"></script>
-        <script type="text/javascript" src="js//qrcode.min.js"></script>
+        <script type="text/javascript" src="js/123/qrcode.min.js"></script>
         <script type="text/javascript"
             src="js/jquery.colorbox-min.js"></script>
         <script type="text/javascript"
@@ -30,10 +30,10 @@
 
         <script>
         if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
-            document.write('<link rel="stylesheet" type="text/css" href="../css/style-320.css" media="screen and (max-width:767px)"/>');
-            document.write('<script type="text/javascript" src="../js/reactive.js"><\/script>');
+            document.write('<link rel="stylesheet" type="text/css" href="css/style-320.css" media="screen and (max-width:767px)"/>');
+            document.write('<script type="text/javascript" src="js/reactive.js"><\/script>');
             $(document).ready(function () {
-                $("#logo").html('<img src="/images/logo.png" width="300" usemap="#plantmap" /><map name="plantmap"><area shape="rect" coords="0,0,120,200" alt="国家知识产权局" href="https://www.cnipa.gov.cn" /><area shape="rect" coords="350,0,440,200" alt="中国专利公布公告" href="/Index" /></map>');
+                $("#logo").html('<img src="images/logo.png" width="300" usemap="#plantmap" /><map name="plantmap"><area shape="rect" coords="0,0,120,200" alt="国家知识产权局" href="https://www.cnipa.gov.cn" /><area shape="rect" coords="350,0,440,200" alt="中国专利公布公告" href="/Index" /></map>');
               });
         }else {
             $(document).ready(function () {
