--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="css/base.css">
         <link rel="stylesheet" type="text/css" href="css/style-768.css"
             media="screen and (max-width:1280px)">
-        <link href="../css/colorbox.css" rel="stylesheet" type="text/css">
+        <link href="css/colorbox.css" rel="stylesheet" type="text/css">
 
         <!--[if lt IE 9]><script r='m'>document.createElement("section")</script><![endif]--><script
             type="text/javascript" src="js/jquery.min.js"></script>
