--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
             content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
         <meta name="format-detection" content="telephone=no">
 
-        <link rel="stylesheet" type="text/css" href="css/base.css">
-        <link rel="stylesheet" type="text/css" href="css/style-768.css"
+        <link rel="stylesheet" type="text/css" href="./css/base.css">
+        <link rel="stylesheet" type="text/css" href="./css/style-768.css"
             media="screen and (max-width:1280px)">
-        <link href="css/colorbox.css" rel="stylesheet" type="text/css">
+        <link href="./css/colorbox.css" rel="stylesheet" type="text/css">
 
         <!--[if lt IE 9]><script r='m'>document.createElement("section")</script><![endif]--><script
-            type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/datecheck.js?v=2021"></script>
-        <script type="text/javascript" src="js/jquery.hoverIntent.js"></script>
-        <script type="text/javascript" src="js/jquery.topage.js"></script>
-        <script type="text/javascript" src="js/common.js"></script>
-        <script type="text/javascript" src="js/mask.js"></script>
-        <script type="text/javascript" src="js/123/qrcode.min.js"></script>
+            type="text/javascript" src="./js/jquery.min.js"></script>
+        <script type="text/javascript" src="./js/datecheck.js?v=2021"></script>
+        <script type="text/javascript" src="./js/jquery.hoverIntent.js"></script>
+        <script type="text/javascript" src="./js/jquery.topage.js"></script>
+        <script type="text/javascript" src="./js/common.js"></script>
+        <script type="text/javascript" src="./js/mask.js"></script>
+        <script type="text/javascript" src="./js/123/qrcode.min.js"></script>
         <script type="text/javascript"
-            src="js/jquery.colorbox-min.js"></script>
+            src="./js/jquery.colorbox-min.js"></script>
         <script type="text/javascript"
-            src="js/jquery.colorbox-zh-CN.js"></script>
+            src="./js/jquery.colorbox-zh-CN.js"></script>
         <script language="javascript" type="text/javascript"
-            src="My97DatePicker/WdatePicker.js" defer="defer"></script>
+            src="./My97DatePicker/WdatePicker.js" defer="defer"></script>
 
         <script>
         if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
@@ -42,7 +42,7 @@
         }
     </script>
 
-        <link href="My97DatePicker/skin/WdatePicker.css" rel="stylesheet"
+        <link href="./My97DatePicker/skin/WdatePicker.css" rel="stylesheet"
             type="text/css"><script charset="utf-8"
             src="chrome-extension://jgphnjokjhjlcnnajmfjlacjnjkhleah/js/btype.js"></script><script
             type="text/javascript" charset="utf-8"
@@ -53,7 +53,7 @@
             <div class="header">
                 <div class="sitebar">
                     <div class="w" id="logo">
-                        <img src="images/logo.png" usemap="#plantmap">
+                        <img src="./images/logo.png" usemap="#plantmap">
                         <map name="plantmap">
                             <area shape="rect" coords="0,0,190,200"
                                 alt="国家知识产权局" href="https://www.cnipa.gov.cn">
@@ -136,10 +136,10 @@
                                     <dt>
                                         <span>
                                             <a
-                                                href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/HDA0003484762510000011.jpg"
+                                                href="./imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/HDA0003484762510000011.jpg"
                                                 class="ft cboxElement">
                                                 <img
-                                                    src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/HDA0003484762510000011.jpg">
+                                                    src="./imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/HDA0003484762510000011.jpg">
                                             </a>
                                         </span>
                                     </dt>
