--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
             content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
         <meta name="format-detection" content="telephone=no">
 
-        <link rel="stylesheet" type="text/css" href="/css/base.css">
-        <link rel="stylesheet" type="text/css" href="/css/style-768.css"
+        <link rel="stylesheet" type="text/css" href="css/base.css">
+        <link rel="stylesheet" type="text/css" href="css/style-768.css"
             media="screen and (max-width:1280px)">
-        <link href="/css/colorbox.css" rel="stylesheet" type="text/css">
+        <link href="css/colorbox.css" rel="stylesheet" type="text/css">
 
         <!--[if lt IE 9]><script r='m'>document.createElement("section")</script><![endif]--><script
-            type="text/javascript" src="/js/jquery.min.js"></script>
-        <script type="text/javascript" src="/js/datecheck.js?v=2021"></script>
-        <script type="text/javascript" src="/js/jquery.hoverIntent.js"></script>
-        <script type="text/javascript" src="/js/jquery.topage.js"></script>
-        <script type="text/javascript" src="/js/common.js"></script>
-        <script type="text/javascript" src="/js/mask.js"></script>
-        <script type="text/javascript" src="/js/123/qrcode.min.js"></script>
+            type="text/javascript" src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="js/datecheck.js?v=2021"></script>
+        <script type="text/javascript" src="js/jquery.hoverIntent.js"></script>
+        <script type="text/javascript" src="js/jquery.topage.js"></script>
+        <script type="text/javascript" src="js/common.js"></script>
+        <script type="text/javascript" src="js/mask.js"></script>
+        <script type="text/javascript" src="js/123/qrcode.min.js"></script>
         <script type="text/javascript"
-            src="/js/jquery.colorbox-min.js"></script>
+            src="js/jquery.colorbox-min.js"></script>
         <script type="text/javascript"
-            src="/js/jquery.colorbox-zh-CN.js"></script>
+            src="js/jquery.colorbox-zh-CN.js"></script>
         <script language="javascript" type="text/javascript"
-            src="/My97DatePicker/WdatePicker.js" defer="defer"></script>
+            src="My97DatePicker/WdatePicker.js" defer="defer"></script>
 
         <script>
         if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
@@ -42,7 +42,7 @@
         }
     </script>
 
-        <link href="/My97DatePicker/skin/WdatePicker.css" rel="stylesheet"
+        <link href="My97DatePicker/skin/WdatePicker.css" rel="stylesheet"
             type="text/css"><script charset="utf-8"
             src="chrome-extension://jgphnjokjhjlcnnajmfjlacjnjkhleah/js/btype.js"></script><script
             type="text/javascript" charset="utf-8"
@@ -100,7 +100,7 @@
 
                         <div class="detail-row row">
                             <div class="info">
-                                <dl><dt>授权公告号：</dt><dd>CN114376853B</dd></dl>
+                                <dl><dt>授权公告：</dt><dd>CN114376853B</dd></dl>
                                 <dl><dt>授权公告日：</dt><dd>2024.03.01</dd></dl>
                                 <dl><dt>申请号：</dt><dd>2022100776657</dd></dl>
                                 <dl><dt>申请日：</dt><dd>2022.01.24</dd></dl>
