--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             media="screen and (max-width:1280px)">
         <link href="css/colorbox.css" rel="stylesheet" type="text/css">
 
-        <!--[if lt IE 9]><script r='m'>document.createElement("section")</script><![endif]--><script
-            type="text/javascript" src="js/jquery.min.js"></script>
+        <!--[if lt IE 9]><script r='m'>document.createElement("section")</script><![endif]-->
+        <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/datecheck.js?v=2021"></script>
         <script type="text/javascript" src="js/jquery.hoverIntent.js"></script>
         <script type="text/javascript" src="js/jquery.topage.js"></script>
@@ -53,7 +53,7 @@
             <div class="header">
                 <div class="sitebar">
                     <div class="w" id="logo">
-                        <img src="/images/logo.png" usemap="#plantmap">
+                        <img src="images/logo.png" usemap="#plantmap">
                         <map name="plantmap">
                             <area shape="rect" coords="0,0,190,200"
                                 alt="国家知识产权局" href="https://www.cnipa.gov.cn">
