--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
             content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
         <meta name="format-detection" content="telephone=no">
 
-        <link rel="stylesheet" type="text/css" href="css/base.css">
-        <link rel="stylesheet" type="text/css" href="css/style-768.css"
+        <link rel="stylesheet" type="text/css" href="CSS/base.css">
+        <link rel="stylesheet" type="text/css" href="CSS/style-768.css"
             media="screen and (max-width:1280px)">
-        <link href="css/colorbox.css" rel="stylesheet" type="text/css">
+        <link href="CSS/colorbox.css" rel="stylesheet" type="text/css">
 
         <!--[if lt IE 9]><script r='m'>document.createElement("section")</script><![endif]-->
         <script type="text/javascript" src="js/jquery.min.js"></script>
