--- a/index.html
+++ b/index.html
@@ -198,34 +198,32 @@
                 <div class="w">
                     <p class="links">
                         <a
-                            href="http://epub.cnipa.gov.cn/Article?index=4">版权声明</a><i
+                            href="">版权声明</a><i
                             class="line"></i>
                         <a
-                            href="http://epub.cnipa.gov.cn/Article?index=5">联系我们</a>
+                            href="">联系我们</a>
                     </p>
                     <p class="copyright">
                         主办单位：国家知识产权局 软件维护：知识产权出版社 网站标识码：bm38000007 ICP备案编号：<a
-                            href="http://beian.miit.gov.cn/"
+                            href=""
                             target="_blank">京ICP备05069085号-14</a>
                         <br>
-                        <a
-                            href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11040102700058"
-                            target="_blank"><img
-                                src="https://www.cnipa.gov.cn/picture/0/2006012349113019652.png">京公网安备
+                        <a href="" target="_blank"> <img src="" >
+                            京公网安备
                             11040102700058号</a>
                         &nbsp;版权所有：国家知识产权局（未经许可不得复制） 网站技术支持：010-62086466 / 6421
                         / 6415
                     </p>
                     <a class="other"
-                        href="http://bszs.conac.cn/sitename?method=show&amp;id=275F111369894D2CE053022819AC84F9"
+                        href=""
                         target="_blank"><img
-                            src="https://www.cnipa.gov.cn/picture/0/2004271032321929259.png"
+                            src=""
                             style="width: 55px;height:55px"></a>
                     <a class="other"><script id="_jiucuo_" sitecode="bm38000007"
-                            src="https://zfwzgl.www.gov.cn/exposure/jiucuo.js"> </script><span
+                            src=""> </script><span
                             id="_span_jiucuo"><img onclick="Link('bm38000007')"
                                 style="margin:0;border:0;cursor: pointer;"
-                                src="https://zfwzgl.www.gov.cn/exposure/images/jiucuo.png?v=bm38000007"></span></a><a>
+                                src=""></span></a><a>
                     </a></div><a>
                 </a></div><a>
             </a></div><a>
