--- a/index.html
+++ b/index.html
@@ -216,9 +216,7 @@
                     </p>
                     <a class="other"
                         href=""
-                        target="_blank"><img
-                            src=""
-                            style="width: 55px;height:55px"></a>
+                        target="_blank"></a>
                     <a class="other"><script id="_jiucuo_" sitecode="bm38000007"
                             src=""> </script><span
                             id="_span_jiucuo"><img onclick="Link('bm38000007')"
