--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
                                 <dl><dt>申请日：</dt><dd>2022.01.24</dd></dl>
                                 <dl><dt>同一申请的已公布的文献号：</dt><dd>CN114376853A</dd></dl>
                                 <dl><dt>申请公布日：</dt><dd>2022.04.22</dd></dl>
-                                <dl><dt>专利权人：</dt><dd>赵娜</dd></dl>
-                                <dl><dt>地址：</dt><dd>325206浙江省温州市瑞安市莘塍街道南垟村</dd></dl>
-                                <dl><dt>发明人：</dt><dd>赵娜</dd></dl>
+                                <dl><dt>专利权人：</dt><dd>李培培</dd></dl>
+                                <dl><dt>地址：</dt><dd>河南省商丘市睢阳区凯旋南路292号商丘市第一人民医院</dd></dl>
+                                <dl><dt>发明人：</dt><dd>李培培,曹飞,吕小兰,赵娜</dd></dl>
                                 <dl><dt>分类号：</dt><dd>A61G15/00(2006.01)I;A61G15/10(2006.01)I;A61G15/12(2006.01)I;A61H9/00(2006.01)I;A63B23/12(2006.01)I;A63B23/14(2006.01)I;A63B21/05(2006.01)I</dd></dl>
-                                <dl><dt>专利代理机构：</dt><dd>北京华仁联合知识产权代理有限公司11588</dd></dl>
-                                <dl><dt>专利代理师：</dt><dd>王希刚</dd></dl>
+                                <dl><dt>专利代理机构：</dt><dd>重庆创新专利商标代理有限公司50125</dd></dl>
+                                <dl><dt>专利代理师：</dt><dd>赵涛</dd></dl>
                                 <dl>
                                     <dt>对比文件：</dt>
                                     <dd>
