--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
                 </div>
             </div>
 
-            <form id="patd" method="post" target="_blank"
+            <!-- <form id="patd" method="post" target="_blank"
                 action="/Sw/SwDetailQuery">
                 <input type="hidden" name="an">
                 <input type="hidden" name="pubType">
                 <input type="hidden" name="ggr">
                 <input name="__RequestVerificationToken" type="hidden"
-                    value="CfDJ8GHezpO6FPlMppVmez8DXxIgvX3xTw8ewsEr_kILoTU_P1ddfB4bqtcP-emnR0INE9iytwLe7kYXuTX9MzvA4T6dsUCx33EOt4RviwnozUY715ONx9qKQNL75rvoq-4evE_0lNwZHg6CmyIh_KDKLE8"></form>
+                    value="CfDJ8GHezpO6FPlMppVmez8DXxIgvX3xTw8ewsEr_kILoTU_P1ddfB4bqtcP-emnR0INE9iytwLe7kYXuTX9MzvA4T6dsUCx33EOt4RviwnozUY715ONx9qKQNL75rvoq-4evE_0lNwZHg6CmyIh_KDKLE8"></form> -->
             <script>
     $(document).ready(function () {
         $(".ft").colorbox({ rel: 'ft', maxWidth: "800", maxHeight: "550" });
