--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             document.write('<link rel="stylesheet" type="text/css" href="CSS/style-320.css" media="screen and (max-width:767px)"/>');
             document.write('<script type="text/javascript" src="js/reactive.js"><\/script>');
             $(document).ready(function () {
-                $("#logo").html('<img src="images/logo.png" width="300" usemap="#plantmap" /><map name="plantmap"><area shape="rect" coords="0,0,120,200" alt="国家知识产权局" href="https://www.cnipa.gov.cn" /><area shape="rect" coords="350,0,440,200" alt="中国专利公布公告" href="/Index" /></map>');
+                $("#logo").html('<img src="images/logo.png" width="300" usemap="#plantmap" /><map name="plantmap"><area shape="rect" coords="0,0,120,200" alt="国家知识产权局" href="" /><area shape="rect" coords="350,0,440,200" alt="中国专利公布公告" href="/Index" /></map>');
               });
         }else {
             $(document).ready(function () {
