--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <script>
         if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
             document.write('<link rel="stylesheet" type="text/css" href="CSS/style-320.css" media="screen and (max-width:767px)"/>');
-            // document.write('<script type="text/javascript" src="js/reactive.js"><\/script>');
+            document.write('<script type="text/javascript" src="js/reactive.js"><\/script>');
             $(document).ready(function () {
                 $("#logo").html('<img src="images/logo.png" width="300" usemap="#plantmap" /><map name="plantmap"><area shape="rect" coords="0,0,120,200" alt="国家知识产权局" href="" /><area shape="rect" coords="350,0,440,200" alt="中国专利公布公告" href="/Index" /></map>');
               });
