--- a/20240917001.html
+++ b/20240917001.html
@@ -83,7 +83,7 @@
                 <div class="w">
                     <div class="detail-main">
                         <div class="detail-top">
-                            <h2 class="title">一种神经内科诊疗辅助装置</h2>
+                            <h2 class="title">一种中医心血管内科临床锻炼装置</h2>
 
                             <div class="func">
                                 <a class="btn sml"
