--- a/20240917002.html
+++ b/20240917002.html
@@ -83,7 +83,7 @@
                 <div class="w">
                     <div class="detail-main">
                         <div class="detail-top">
-                            <h2 class="title">一种神经内科诊疗辅助装置</h2>
+                            <h2 class="title">一种可定时的呼吸内科用医疗器具消毒设备</h2>
 
                             <div class="func">
                                 <a class="btn sml"
