--- a/20240917002.html
+++ b/20240917002.html
@@ -77,7 +77,7 @@
                         <a class="desc" href=""><i
                                 class="icon-desc"></i>使用说明</a>
                     </div>
-                </div>
+                </div>qq        7
             </div>
             <div class="content" style="background:none">
                 <div class="w">
