--- a/20240917002.html
+++ b/20240917002.html
@@ -133,10 +133,10 @@
                                     <dt>
                                         <span>
                                             <a
-                                                href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20240917002.png"
+                                                href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20240917002.jpg"
                                                 class="ft cboxElement">
                                                 <img
-                                                    src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20240917002.png">
+                                                    src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20240917002.jpg">
                                             </a>
                                         </span>
                                     </dt>
