--- a/20240917001.html
+++ b/20240917001.html
@@ -129,10 +129,10 @@
                                     <dt>
                                         <span>
                                             <a
-                                                href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20240917001.png"
+                                                href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20240917001.jpg"
                                                 class="ft cboxElement">
                                                 <img
-                                                    src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20240917001.png">
+                                                    src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20240917001.jpg">
                                             </a>
                                         </span>
                                     </dt>
