--- a/20250216002.html
+++ b/20250216002.html
@@ -100,7 +100,7 @@
                             <dl><dt>申请日：</dt><dd>2020.06.12</dd></dl>
                             <dl><dt>专利权人：</dt><dd>安徽医科大学第一附属医院</dd></dl>
                             <dl><dt>地址：</dt><dd>230000安徽省合肥市绩溪路218号</dd></dl>
-                            <dl><dt>发明人：</dt><dd>王守丽;陈晨;陆小雅;陆雨</dd></dl>
+                            <dl><dt>发明人：</dt><dd>王守丽;曹慧;陆小雅;陆雨</dd></dl>
                             <dl><dt>分类号：</dt><dd>A61G7/002(2006.01)I;A61G7/05(2006.01)I;A61G7/053(2006.01)I</dd></dl>
                             <dl><dt>专利代理机构：</dt><dd>重庆创新专利商标代理有限公司50125</dd></dl>
                             <dl><dt>专利代理师：</dt><dd>王洪英</dd></dl>
