--- a/20250314001.html
+++ b/20250314001.html
@@ -83,7 +83,7 @@
             <div class="w">
                 <div class="detail-main">
                     <div class="detail-top">
-                        <h2 class="title">一种灌肠专用智能自动病床</h2>
+                        <h2 class="title">一种便携式神经内科临床监测器</h2>
 
                         <div class="func">
                             <a class="btn sml"title="发明专利">实用新型专利</a>
@@ -94,7 +94,7 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告：</dt><dd>CN219461155U</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN219461155U</dd></dl>
                             <dl><dt>授权公告日：</dt><dd>2023.08.04</dd></dl>
                             <dl><dt>申请号：</dt><dd>2022219271467</dd></dl>
                             <dl><dt>申请日：</dt><dd>2022.07.25</dd></dl>
