--- a/20250315002.html
+++ b/20250315002.html
@@ -94,7 +94,7 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告：</dt><dd>CN220213362U</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN220213362U</dd></dl>
                             <dl><dt>授权公告日：</dt><dd>2023.12.22</dd></dl>
                             <dl><dt>申请号：</dt><dd>2023204407558</dd></dl>
                             <dl><dt>申请日：</dt><dd>2023.03.03</dd></dl>
