--- a/20250315003.html
+++ b/20250315003.html
@@ -83,7 +83,7 @@
             <div class="w">
                 <div class="detail-main">
                     <div class="detail-top">
-                        <h2 class="title">一种助行装置</h2>
+                        <h2 class="title">一种儿科护理保温箱</h2>
 
                         <div class="func">
                             <a class="btn sml"title="发明专利">实用新型专利</a>
@@ -94,22 +94,22 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告号：</dt><dd>CN220213362U</dd></dl>
-                            <dl><dt>授权公告日：</dt><dd>2023.12.22</dd></dl>
-                            <dl><dt>申请号：</dt><dd>2023204407558</dd></dl>
-                            <dl><dt>申请日：</dt><dd>2023.03.03</dd></dl>
-                            <dl><dt>专利权人：</dt><dd>汕头市中心医院</dd></dl>
-                            <dl><dt>地址：</dt><dd>515000广东省汕头市金平区外马路114号</dd></dl>
-                            <dl><dt>发明人：</dt><dd>蔡史健;郑秋霞;王凤霞</dd></dl>
-                            <dl><dt>分类号：</dt><dd>A61G12/00(2006.01)I</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN222487934U</dd></dl>
+                            <dl><dt>授权公告日：</dt><dd>2025.02.18</dd></dl>
+                            <dl><dt>申请号：</dt><dd>2024206253864</dd></dl>
+                            <dl><dt>申请日：</dt><dd>2024.03.28</dd></dl>
+                            <dl><dt>专利权人：</dt><dd>劳清;李小荷;黄红梅</dd></dl>
+                            <dl><dt>地址：</dt><dd>532799广西壮族自治区南宁市隆安县城厢镇城西路25号隆安县人民医院</dd></dl>
+                            <dl><dt>发明人：</dt><dd>请求不公布姓名</dd></dl>
+                            <dl><dt>分类号：</dt><dd>A61G11/00(2006.01)I</dd></dl>
                             <dl><dt>专利代理机构：</dt><dd>重庆博观星辉专利代理事务所(特殊普通合伙)</dd></dl>
-                            <dl><dt>专利代理师：</dt><dd>易文学</dd></dl>
+                            <dl><dt>专利代理师：</dt><dd>文超</dd></dl>
                         </div>
 
                         <div class="intro">
                             <dl>
                                 <dt>摘要：</dt>
-                                <dd>本实用新型公开了一种助行装置，包括底座，所述底座呈凵字形，且底座的上表面固定连接有支撑柱，支撑柱的顶端设置有扶手架，所述底座的下表面固定安装有两个位置相对应的定位移动轮，且底座的下表面安装有两个辅助轮，所述支撑柱的表面固定连接有条形固定盒，条形固定盒的内部设置有联动刹车组件。本实用新型通过在助行装置上设计有可以手动控制的联动刹车组件，可以让患者在使用助行装置进行康复训练的过程中，通过转动手轮盘对限位抵紧块的位置进行控制，从而利用限位抵紧块对定位移动轮进行抵紧固定或解锁，解决了现有助行器采用的带锁万向轮需要用脚去踩踏的问题，使得患者对助行器的刹车操作更为方便。</dd>
+                                <dd>本实用新型提供一种儿科护理保温箱，涉及保温箱技术领域，包括底座，所述底座的表面固定安装有保温箱本体，所述底座的表面固定安装有增氧机，所述保温箱本体的表面固定安装有转杆，所述转杆的表面转动连接有顶盖，所述顶盖的表面固定安装有把手，所述增氧机的输出端安装有喷气口，所述底座的内部转动连接有丝杆，所述丝杆的内部滑动连接有转把，所述底座的内部固定安装有限位杆，本实用新型中，通过设置丝杆、滑杆、限位块、连接块、底板、软垫和转把起到了对软垫进行调节的效果，从而便于医护人员在放置好婴儿后对软垫进行调节的效果，避免了因婴儿没有对准软垫需要对婴儿进行调整的情况，且结构简单，使用性强。</dd>
                             </dl>
                         </div>
 
@@ -119,10 +119,10 @@
                                 <dt>
                                     <span>
                                         <a
-                                            href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20250315002.png"
+                                            href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20250315003.png"
                                             class="ft cboxElement">
                                             <img
-                                                src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20250315002.png">
+                                                src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20250315003.png">
                                         </a>
                                     </span>
                                 </dt>
