--- a/20241106001.html
+++ b/20241106001.html
@@ -98,7 +98,7 @@
 
                         <div class="detail-row row">
                             <div class="info">
-                                <dl><dt>授权公告：</dt><dd>CN216022963U</dd></dl>
+                                <dl><dt>授权公告号：</dt><dd>CN216022963U</dd></dl>
                                 <dl><dt>授权公告日：</dt><dd>2022.03.15</dd></dl>
                                 <dl><dt>申请号：</dt><dd>2021226834452</dd></dl>
                                 <dl><dt>申请日：</dt><dd>2021.11.04</dd></dl>
