--- a/20241106003.html
+++ b/20241106003.html
@@ -98,7 +98,7 @@
 
                         <div class="detail-row row">
                             <div class="info">
-                                <dl><dt>授权公告：</dt><dd>CN215230205U</dd></dl>
+                                <dl><dt>授权公告号：</dt><dd>CN215230205U</dd></dl>
                                 <dl><dt>授权公告日：</dt><dd>2021.12.21</dd></dl>
                                 <dl><dt>申请号：</dt><dd>2021203889304</dd></dl>
                                 <dl><dt>申请日：</dt><dd>2021.02.22</dd></dl>
