--- a/20241116001.html
+++ b/20241116001.html
@@ -100,7 +100,7 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告：</dt><dd>CN112773633B</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN112773633B</dd></dl>
                             <dl><dt>授权公告日：</dt><dd>2022.03.11</dd></dl>
                             <dl><dt>申请号：</dt><dd>2021102407281</dd></dl>
                             <dl><dt>申请日：</dt><dd>2021.03.04</dd></dl>
