--- a/20250116001.html
+++ b/20250116001.html
@@ -94,7 +94,7 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告：</dt><dd>CN211324999U</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN211324999U</dd></dl>
                             <dl><dt>授权公告日：</dt><dd>2020.08.25</dd></dl>
                             <dl><dt>申请号：</dt><dd>2019210551901</dd></dl>
                             <dl><dt>申请日：</dt><dd>2019.07.08</dd></dl>
