--- a/20250116002.html
+++ b/20250116002.html
@@ -94,7 +94,7 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告：</dt><dd>CN214912475U</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN214912475U</dd></dl>
                             <dl><dt>授权公告日：</dt><dd>2021.11.30</dd></dl>
                             <dl><dt>申请号：</dt><dd>2020232172178</dd></dl>
                             <dl><dt>申请日：</dt><dd>2020.12.28</dd></dl>
