--- a/20250116004.html
+++ b/20250116004.html
@@ -94,7 +94,7 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告：</dt><dd>CN216496084U</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN216496084U</dd></dl>
                             <dl><dt>授权公告日：</dt><dd>2022.05.13</dd></dl>
                             <dl><dt>申请号：</dt><dd>2022208854984</dd></dl>
                             <dl><dt>申请日：</dt><dd>2022.04.18</dd></dl>
