--- a/20250116005.html
+++ b/20250116005.html
@@ -94,7 +94,7 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告：</dt><dd>CN221534315U</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN221534315U</dd></dl>
                             <dl><dt>授权公告日：</dt><dd>2024.08.16</dd></dl>
                             <dl><dt>申请号：</dt><dd>2023224775938</dd></dl>
                             <dl><dt>申请日：</dt><dd>2023.09.13</dd></dl>
