--- a/20250210002.html
+++ b/20250210002.html
@@ -94,7 +94,7 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告：</dt><dd>CN218338996U</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN218338996U</dd></dl>
                             <dl><dt>授权公告日：</dt><dd>2023.01.20</dd></dl>
                             <dl><dt>申请号：</dt><dd>2022219064965</dd></dl>
                             <dl><dt>申请日：</dt><dd>2022.07.20</dd></dl>
