--- a/20250210003.html
+++ b/20250210003.html
@@ -95,7 +95,7 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告：</dt><dd>CN113694294B</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN113694294B</dd></dl>
                             <dl><dt>授权公告日：</dt><dd>2024.02.13</dd></dl>
                             <dl><dt>申请号：</dt><dd>2021109445710</dd></dl>
                             <dl><dt>申请日：</dt><dd>2021.08.17</dd></dl>
