--- a/20250210004.html
+++ b/20250210004.html
@@ -95,7 +95,7 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告：</dt><dd>CN109223503B</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN109223503B</dd></dl>
                             <dl><dt>授权公告日：</dt><dd>2020.11.13</dd></dl>
                             <dl><dt>申请号：</dt><dd>2018111721789</dd></dl>
                             <dl><dt>申请日：</dt><dd>2018.10.09</dd></dl>
