--- a/20250221001.html
+++ b/20250221001.html
@@ -95,7 +95,7 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告：</dt><dd>CN113288807B</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN113288807B</dd></dl>
                             <dl><dt>授权公告日：</dt><dd>2023.10.31</dd></dl>
                             <dl><dt>申请号：</dt><dd>2021105337971</dd></dl>
                             <dl><dt>申请日：</dt><dd>2021.05.17</dd></dl>
