--- a/20250413001.html
+++ b/20250413001.html
@@ -102,8 +102,8 @@
                             <dl><dt>地址：</dt><dd>050000河北省石家庄市体育南大街15号</dd></dl>
                             <dl><dt>发明人：</dt><dd>韩幸佳;谢丽丽;朱子轩;杨煊;陆明雄</dd></dl>
                             <dl><dt>分类号：</dt><dd>A61G3/00(2006.01)I;A61G15/14(2006.01)I;A61G15/10(2006.01)I</dd></dl>
-                            <dl><dt>专利权人：</dt><dd>重庆博观星辉专利代理事务所(特殊普通合伙)</dd></dl>
-                            <dl><dt>专利权人：</dt><dd>文超</dd></dl>
+                            <dl><dt>专利代理机构：</dt><dd>重庆博观星辉专利代理事务所(特殊普通合伙)</dd></dl>
+                            <dl><dt>专利代理师：</dt><dd>文超</dd></dl>
                         </div>
 
                         <div class="intro">
