--- a/20250802002.html
+++ b/20250802002.html
@@ -83,7 +83,7 @@
             <div class="w">
                 <div class="detail-main">
                     <div class="detail-top">
-                        <h2 class="title">一种麻醉剂定量喷药器</h2>
+                        <h2 class="title">一种俯卧用人体生态手术架</h2>
 
                         <div class="func">
                             <a class="btn sml"title="发明专利">发明专利</a>
@@ -95,23 +95,25 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告号：</dt><dd>CN111514450B</dd></dl>
-                            <dl><dt>授权公告日：</dt><dd>2022.09.30</dd></dl>
-                            <dl><dt>申请号：</dt><dd>2020105071884</dd></dl>
-                            <dl><dt>申请日：</dt><dd>2020.06.05</dd></dl>
-                            <dl><dt>同一申请的已公布的文献号：</dt><dd>CN111514450A</dd></dl>
-                            <dl><dt>申请公布日：</dt><dd>2020.08.11</dd></dl>
-                            <dl><dt>专利权人：</dt><dd>王丹</dd></dl>
-                            <dl><dt>地址：</dt><dd>343000江西省赣州市章贡区翠微路中航城8栋803室</dd></dl>
-                            <dl><dt>发明人：</dt><dd>王丹;雷磊</dd></dl>
-                            <dl><dt>分类号：</dt><dd>A61M35/00(2006.01)I;A61M19/00(2006.01)I;A61M11/00(2006.01)I</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN112315728B</dd></dl>
+                            <dl><dt>授权公告日：</dt><dd>2021.04.02</dd></dl>
+                            <dl><dt>申请号：</dt><dd>2021100007693</dd></dl>
+                            <dl><dt>申请日：</dt><dd>2021.01.04</dd></dl>
+                            <dl><dt>同一申请的已公布的文献号：</dt><dd>CN112315728A</dd></dl>
+                            <dl><dt>申请公布日：</dt><dd>2021.02.05</dd></dl>
+                            <dl><dt>专利权人：</dt><dd>中国人民解放军陆军军医大学第一附属医院</dd></dl>
+                            <dl><dt>地址：</dt><dd>400038重庆市沙坪坝区高滩岩正街30号</dd></dl>
+                            <dl><dt>发明人：</dt><dd>彭君怡;李凤;李春香;窦鹤鸿</dd></dl>
+                            <dl><dt>分类号：</dt><dd>A61G13/12(2006.01)I;A61G13/06(2006.01)I</dd></dl>
                             <dl><dt>对比分类号</dt><dd>CN 110354378 A,2019.10.22; CN 2255317 Y,1997.06.04; US 2015097058 A1,2015.04.09; US 2016193617 A1,2016.07.07; CN 207305878 U,2018.05.04; CN 209950196 U,2020.01.17</dd></dl>
+                            <dl><dt>专利代理机构：</dt><dd>重庆博观星辉专利代理事务所(特殊普通合伙)</dd></dl>
+                            <dl><dt>专利代理师：</dt><dd>刘丽娜</dd></dl>
                         </div>
 
                         <div class="intro">
                             <dl>
                                 <dt>摘要：</dt>
-                                <dd>本发明公开了一种麻醉剂定量喷药器，包括浮动喷头机构，容器，定量加压机构，浮动塞子，支架软管，复位推杆。该装置中的装置中的定量加压机构可以通过调节剂量大小来控制一次麻醉的剂量。并通过和浮动塞子的配合，做到剂量设定完毕，一次加压后如若药剂未喷完，加压手柄不会复位，可以继续加压，直到所设定剂量全部喷完为止。因此即使中途停止也能精准控制剂量。</dd>
+                                <dd>本发明提供了一种俯卧用人体生态手术架，包括生态架、横杆、升降杆和手术床；生态架设置在横杆上，横杆的两端分别设置有升降杆；升降杆包括上杆段、套筒和下杆段；生态架包括头部生态架、躯干部生态架和腿部生态架；躯干部生态架包括第一臂架、胸腹部生态架和第二臂架；第一臂架、胸腹部生态架和第二臂架沿横杆的长度方向依次设置；腿部生态架包括第一腿架和第二腿架；第一腿架和第二腿架沿横杆的长度方向依次设置。本发明的俯卧用人体生态手术架，利用包括上杆段、套筒和下杆段的可调节的升降杆和与固定在横杆上的生态架，能够将生态架中的病人在仰躺和俯卧的状态中分别安装固定，完成病人在仰躺状态和俯卧状态之间的自由转换。</dd>
                             </dl>
                         </div>
 
@@ -121,10 +123,10 @@
                                 <dt>
                                     <span>
                                         <a
-                                            href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20250802001.png"
+                                            href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20250802002.png"
                                             class="ft cboxElement">
                                             <img
-                                                src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20250802001.png">
+                                                src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20250802002.png">
                                         </a>
                                     </span>
                                 </dt>
