--- a/20250802003.html
+++ b/20250802003.html
@@ -83,7 +83,7 @@
             <div class="w">
                 <div class="detail-main">
                     <div class="detail-top">
-                        <h2 class="title">一种麻醉剂定量喷药器</h2>
+                        <h2 class="title">一种神经阻滞麻醉针、麻醉装置及其使用方法</h2>
 
                         <div class="func">
                             <a class="btn sml"title="发明专利">发明专利</a>
@@ -95,23 +95,23 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告号：</dt><dd>CN111514450B</dd></dl>
-                            <dl><dt>授权公告日：</dt><dd>2022.09.30</dd></dl>
-                            <dl><dt>申请号：</dt><dd>2020105071884</dd></dl>
-                            <dl><dt>申请日：</dt><dd>2020.06.05</dd></dl>
-                            <dl><dt>同一申请的已公布的文献号：</dt><dd>CN111514450A</dd></dl>
-                            <dl><dt>申请公布日：</dt><dd>2020.08.11</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN112472251B</dd></dl>
+                            <dl><dt>授权公告日：</dt><dd>2022.07.29</dd></dl>
+                            <dl><dt>申请号：</dt><dd>2021100268072</dd></dl>
+                            <dl><dt>申请日：</dt><dd>2021.01.09</dd></dl>
+                            <dl><dt>同一申请的已公布的文献号：</dt><dd>CN112472251A</dd></dl>
+                            <dl><dt>申请公布日：</dt><dd>2021.03.12</dd></dl>
                             <dl><dt>专利权人：</dt><dd>王丹</dd></dl>
                             <dl><dt>地址：</dt><dd>343000江西省赣州市章贡区翠微路中航城8栋803室</dd></dl>
-                            <dl><dt>发明人：</dt><dd>王丹;雷磊</dd></dl>
-                            <dl><dt>分类号：</dt><dd>A61M35/00(2006.01)I;A61M19/00(2006.01)I;A61M11/00(2006.01)I</dd></dl>
-                            <dl><dt>对比分类号</dt><dd>CN 110354378 A,2019.10.22; CN 2255317 Y,1997.06.04; US 2015097058 A1,2015.04.09; US 2016193617 A1,2016.07.07; CN 207305878 U,2018.05.04; CN 209950196 U,2020.01.17</dd></dl>
+                            <dl><dt>发明人：</dt><dd>王丹;肖永芳</dd></dl>
+                            <dl><dt>分类号：</dt><dd>A61B17/34(2006.01)I</dd></dl>
+                            <dl><dt>对比分类号</dt><dd>CN 107510495 A,2017.12.26; CN 110575236 A,2019.12.17; CN 1354022 A,2002.06.19; CN 112168295 A,2021.01.05; US 8622962 B1,2014.01.07; US 2013072900 A1,2013.03.21; US 2009259126 A1,2009.10.15; US 2009062750 A1,2009.03.05; US 2010004558 A1,2010.01.07</dd></dl>
                         </div>
 
                         <div class="intro">
                             <dl>
                                 <dt>摘要：</dt>
-                                <dd>本发明公开了一种麻醉剂定量喷药器，包括浮动喷头机构，容器，定量加压机构，浮动塞子，支架软管，复位推杆。该装置中的装置中的定量加压机构可以通过调节剂量大小来控制一次麻醉的剂量。并通过和浮动塞子的配合，做到剂量设定完毕，一次加压后如若药剂未喷完，加压手柄不会复位，可以继续加压，直到所设定剂量全部喷完为止。因此即使中途停止也能精准控制剂量。</dd>
+                                <dd>本发明提供一种神经阻滞麻醉针、麻醉装置及其使用方法。所述神经阻滞麻醉针包括具有腔体且前端带出液孔的针筒、与所述针筒匹配的活塞芯杆和挡速组件，所述挡速组件包括折臂和支撑囊体，所述针筒的筒壁上设有向所述腔体贯通的槽口，所述折臂铰接于所述槽口中，所述折臂自其铰接点的一个延伸端通过支撑囊体与所述针筒的内壁连接，所述支撑囊体中充有气体，使所述折臂自其铰接点的另一个延伸端自所述槽口延伸至所述腔体内；所述支撑囊体上设有能撕裂并排出气体的封条，所述折臂与所述封条粘贴。与相关技术相比，本发明提供的神经阻滞麻醉针具备提醒操作者回抽的功能，提高穿刺正确率，减少患者不舒适感。</dd>
                             </dl>
                         </div>
 
@@ -121,10 +121,10 @@
                                 <dt>
                                     <span>
                                         <a
-                                            href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20250802001.png"
+                                            href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20250802003.png"
                                             class="ft cboxElement">
                                             <img
-                                                src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20250802001.png">
+                                                src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20250802003.png">
                                         </a>
                                     </span>
                                 </dt>
