--- a/20250802001.html
+++ b/20250802001.html
@@ -105,7 +105,7 @@
                             <dl><dt>地址：</dt><dd>343000江西省赣州市章贡区翠微路中航城8栋803室</dd></dl>
                             <dl><dt>发明人：</dt><dd>王丹;雷磊</dd></dl>
                             <dl><dt>分类号：</dt><dd>A61M35/00(2006.01)I;A61M19/00(2006.01)I;A61M11/00(2006.01)I</dd></dl>
-                            <dl><dt>对比分类号</dt><dd>CN 110354378 A,2019.10.22; CN 2255317 Y,1997.06.04; US 2015097058 A1,2015.04.09; US 2016193617 A1,2016.07.07; CN 207305878 U,2018.05.04; CN 209950196 U,2020.01.17</dd></dl>
+                            <dl><dt>对比文件</dt><dd>CN 110354378 A,2019.10.22; CN 2255317 Y,1997.06.04; US 2015097058 A1,2015.04.09; US 2016193617 A1,2016.07.07; CN 207305878 U,2018.05.04; CN 209950196 U,2020.01.17</dd></dl>
                         </div>
 
                         <div class="intro">
