--- a/20250802003.html
+++ b/20250802003.html
@@ -105,7 +105,7 @@
                             <dl><dt>地址：</dt><dd>343000江西省赣州市章贡区翠微路中航城8栋803室</dd></dl>
                             <dl><dt>发明人：</dt><dd>王丹;肖永芳</dd></dl>
                             <dl><dt>分类号：</dt><dd>A61B17/34(2006.01)I</dd></dl>
-                            <dl><dt>对比文件</dt><dd>CN 107510495 A,2017.12.26; CN 110575236 A,2019.12.17; CN 1354022 A,2002.06.19; CN 112168295 A,2021.01.05; US 8622962 B1,2014.01.07; US 2013072900 A1,2013.03.21; US 2009259126 A1,2009.10.15; US 2009062750 A1,2009.03.05; US 2010004558 A1,2010.01.07</dd></dl>
+                            <dl><dt>对比文件：</dt><dd>CN 107510495 A,2017.12.26; CN 110575236 A,2019.12.17; CN 1354022 A,2002.06.19; CN 112168295 A,2021.01.05; US 8622962 B1,2014.01.07; US 2013072900 A1,2013.03.21; US 2009259126 A1,2009.10.15; US 2009062750 A1,2009.03.05; US 2010004558 A1,2010.01.07</dd></dl>
                         </div>
 
                         <div class="intro">
