--- a/20250911002.html
+++ b/20250911002.html
@@ -101,7 +101,7 @@
                             <dl><dt>专利权人：</dt><dd>广州市番禺区妇幼保健院（广州市番禺区何贤纪念医院）</dd></dl>
                             <dl><dt>地址：</dt><dd>511499广州市番禺区市桥街清河东路2号</dd></dl>
                             <dl><dt>发明人：</dt><dd>胡志坚;曾明燕</dd></dl>
-                            <dl><dt>分类号：</dt><dd>A61M16/06(2006.01)I</dd></dl>
+                            <dl><dt>分类号：</dt><dd>G01K13/00(2021.01)I;G01K1/14(2021.01)I</dd></dl>
                             <dl><dt>专利代理机构：</dt><dd>重庆博观星辉专利代理事务所(特殊普通合伙)</dd></dl>
                             <dl><dt>专利代理师：</dt><dd>文超</dd></dl>
                         </div>
