--- a/20251109003.html
+++ b/20251109003.html
@@ -83,7 +83,7 @@
             <div class="w">
                 <div class="detail-main">
                     <div class="detail-top">
-                        <h2 class="title">明装净化灯</h2>
+                        <h2 class="title">液晶观片灯</h2>
 
                         <div class="func">
                             <a class="btn sml"title="发明专利">实用新型专利</a>
@@ -94,10 +94,10 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告号：</dt><dd>CN212869710U</dd></dl>
-                            <dl><dt>授权公告日：</dt><dd>2021.04.02</dd></dl>
-                            <dl><dt>申请号：</dt><dd>2020224755767</dd></dl>
-                            <dl><dt>申请日：</dt><dd>2020.10.31</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN213122455U</dd></dl>
+                            <dl><dt>授权公告日：</dt><dd>2021.05.04</dd></dl>
+                            <dl><dt>申请号：</dt><dd>2020225329697</dd></dl>
+                            <dl><dt>申请日：</dt><dd>2020.11.05</dd></dl>
                             <dl><dt>专利权人：</dt><dd>临西县人民医院</dd></dl>
                             <dl><dt>地址：</dt><dd>054900 河北省邢台市临西县阳光大街与辽河路交叉口往西180米临西县人民医院</dd></dl>
                             <dl><dt>发明人：</dt><dd>修坤慧;王巧龙</dd></dl>
@@ -107,7 +107,7 @@
                         <div class="intro">
                             <dl>
                                 <dt>摘要：</dt>
-                                <dd>本实用新型公开了明装净化灯，包括壳体、灯座和透明罩，所述壳体的内部位于壳体的右侧安装有微型控制箱，所述微型控制箱的内部底端从右至左依次安装有生成器电源控制模块、离子生成器和离子转换器模块，所述微型控制箱上安装有贯穿微型控制箱的释放器。本实用新型中，首先，设有负离子空气净化结构，通过离子转换器模块作用，形成的负离子，通过释放器释放，再经过微型风机驱动扇叶将负离子扩散，实现了灯体内部的空气净化，从而提高了净化灯的实用性能，其次，采用亮度可调式结构，将控制信号经过无线接收模块传输至控制器分析处理，再经过控制器调整亮度调节模块即可完成亮度调节，实现了光源亮度调节的智能化，提高了净化灯的节能效率。</dd>
+                                <dd>本实用新型公开了液晶观片灯，包括安装在墙壁上的安装基板，所述安装基板一侧固定连接有多个第一L型卡块，多个所述第一L型卡块顶端均卡扣连接有第二L型卡块，多个所述第二L型卡块远离安装基板的一端共同固定连接有液晶观片灯主体，所述液晶观片灯主体顶端开设有安装槽，所述安装槽内侧壁分别固定连接有第一固定块与第二固定块，所述第一固定块与第二固定块中心部分分别转动连接有第一转动杆与第二转动杆，本实用新型通过设置绳盘、棘轮、棘爪、转动盘与拉绳，绳盘、棘轮、棘爪、转动盘与拉绳的设置便于更好的对胶片进行固定，使得胶片的夹持效果更好，便于更好的使用。</dd>
                             </dl>
                         </div>
 
